--- a/package.json
+++ b/package.json
@@ -36,6 +36,10 @@
     "html-webpack-plugin": "^5.5.0",
     "jest": "^29.3.1",
     "jest-cli": "^29.3.1",
+    "postcss": "^8.4.19",
+    "postcss-loader": "^7.0.1",
+    "sass": "^1.56.1",
+    "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^4.10.0",
