--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "my-webpack-project",
+  "name": "@hexlet/code",
   "version": "0.1.0",
-  "description": "My webpack project",
+  "description": "My rss-aggregator",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
