--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babel/core": "^7.19.1",
     "@babel/preset-env": "^7.16.11",
     "@webpack-cli/generators": "^2.5.0",
+    "autoprefixer": "^10.4.13",
     "babel-loader": "^8.2.4",
     "css-loader": "^6.7.2",
     "eslint": "^8.27.0",
@@ -46,6 +47,7 @@
     "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.2"
   }
 }
