--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "jest-cli": "^29.3.1",
     "postcss": "^8.4.19",
     "postcss-loader": "^7.0.1",
+    "postcss-preset-env": "^7.8.3",
     "sass": "^1.56.1",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
@@ -48,6 +49,6 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
-    "bootstrap": "^5.2.2"
+    "bootstrap": "^5.2.1"
   }
 }
