--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
-    "bootstrap": "^5.2.1"
+    "bootstrap": "^5.2.1",
+    "on-change": "^4.0.1",
+    "yup": "^0.32.11"
   }
 }
