--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
+    "i18next": "^22.5.1",
     "on-change": "^4.0.1",
     "yup": "^0.32.11"
   }
