--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "i18next": "^22.5.1",
+    "lodash": "^4.17.21",
     "on-change": "^4.0.1",
     "uuid": "^9.0.0",
     "yup": "^0.32.11"
